# mozlang

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  a  hello  tmp.cpp
.github/workflows/: ci.yml
.zed/: settings.json
examples/: bar.zr  foo.zr  function.zr  hello.moz  hello.zr  import.zr  let.zr
src/: Ast.cpp  Ast.h  AstVisitor.cpp  AstVisitor.h  Checker.cpp  Checker.h  CodeGen.cpp  CodeGen.h  DiagnosticEngine.cpp  DiagnosticEngine.h  ExecutableBuilder.cpp  ExecutableBuilder.h  Lexer.cpp  Lexer.h  Location.h  Mozlang.cpp  Painter.cpp  Painter.h  Parser.cpp  Parser.h  Span.h  Token.cpp  Token.h  TypeSystem.cpp  TypeSystem.h  ast.cpp  ast.h  checker.cpp  checker.h  context.cpp  context.h  diagnostic.cpp  diagnostic.h  error.h  ir.h  keywords.cpp  keywords.h  lexer.cpp  lexer.h  loader.cpp  (+12 more)
src/ir/: ir.cpp  ir.h  lib.cpp  lib.h  marshal.cpp  marshal.h
std/: io.zr
test/: CMakeLists.txt  lexer_test.cpp
